<resources>
    <string name="app_name">WearablePC</string>

    <string name="str_recorder_normal">按住说话</string>
    <string name="str_recorder_recording">松开结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>

    <string name="target_ip">指挥端IP地址</string>
    <string name="target_file_port">指挥端文件发送端口</string>
    <string name="local_file_port">本机文件发送端口</string>
    <string name="target_text_port">指挥端文本接收端口</string>
    <string name="local_text_port">本机文本接收端口</string>
    <string name="title_activity_voice_settings">设置</string>

    <string name="title_activity_secret">条密消息列表</string>
    <string name="title_activity_expression_list">常用短语</string>
    <string name="title_activity_expression_edit">编辑常用短语</string>
    <string name="title_activity_expression_add">新建常用短语</string>
    <string name="title_activity_group">条密群发</string>

    <string name="title_activity_user_ip_list">小组成员信息</string>
    <string name="title_activity_user_ip_add">添加小组成员</string>
    <string name="title_activity_user_ip_edit">修改小组成员</string>

    <string name="title_activity_image_manage">图像及视频管理</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
